tests/ui/fail/struct_unnamed.stderr
error: unnamed field structs are not supported
 --> tests/ui/fail/struct_unnamed.rs:4:17
  |
4 | #[derive(Debug, AsyncDebug)]
  |                 ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `AsyncDebug` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `async_debug` found for struct `Mixed` in the current scope
  --> tests/ui/fail/struct_unnamed.rs:27:31
   |
5  | / struct Mixed(
6  | |     String,
7  | |     u64,
8  | |     #[async_debug(parse = RwLock::read, clone, copy, ty = Vec<String>)]
...  |
13 | |     Mutex<u128>,
14 | | );
   | |__- method `async_debug` not found for this
...
27 |           format!("{:?}", mixed.async_debug().await),
   |                                 ^^^^^^^^^^^ method not found in `Mixed`
